--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
+<div class="starter">
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <p>Welcome to {{title}}</p> --}}
+<div class="buttons">
+<a href="/drones" class="btn btn-primary m-2 p-2"> Check out te drones</a> 
+<a href="/drones/create" class="btn btn-primary m-2 p-2"> Create a new drone</a>
+</div>
+</div>
+
