--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,54 @@
 body {
   padding: 50px;
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+  background-image: url('/images/dronesbg.jpg');
+  background-size: cover;
 }
 
 a {
   color: #00b7ff;
+}
+
+.form {
+  margin: 50px;
+  padding: 50px;
+  color: rgb(50, 50, 51);
+  font-weight: 700;
+}
+
+.starter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 150px;
+}
+
+.starter h1 {
+  color: aliceblue;
+  font-size: 5rem;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.list {
+  background-color: aliceblue;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-end;
+  padding: 50px 0;
+  margin-top: 30px;
+}
+
+.list-title {
+  margin-top: 50px;
+  text-align: center;
+  color: aliceblue;
+  font-weight: 700;
 }
