--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,26 @@
+<div class="form">
 <h2>Create a new drone</h2>
+
+<form action="/drones/create" method="POST">
+    <div class="form-group col-md-4 m-2">
+        <label for=""> Name </label>
+        <input type="text" name="name" class="form-control">
+    </div>
+
+    <div class="form-group col-md-4 m-2">
+        <label for=""> Nº of Propellers</label>
+        <input type="number" name="propellers" class="form-control">
+    </div>
+
+    <div class="form-group col-md-4 m-2">
+        <label for=""> Speed </label>
+        <input type="number" name="maxSpeed" class="form-control">
+    </div>
+
+    <button type="submit" class="btn btn-success btn-lg m-2"> Create </button>
+
+</form>
+</div>
+
+<a href="/" class="btn btn-outline-primary mt-3"> <~ Back </a>
+
