--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,28 @@
-<h2>Available drones</h2>
+    <h2 class="list-title">Available drones</h2>
+  
+    <div class="list">
+
+  
+
+    {{#each dronesFromDB}}
+<div class="drones">
+   <h3> {{name}} </h3>
+
+    <h5> Propellers: {{propellers}} </h5> 
+    <h5> Speed: {{maxSpeed}} </h5> 
+    
+    <div class="btn-group mt-2" role="group" aria-label="Basic outlined example">
+    <a href="/drones/{{id}}/edit" class="btn btn-outline-success"> edit </a>
+    <form action="/drones/{{id}}/delete" method="POST"> 
+    <button type="submit" class="btn btn-outline-danger"> delete </button>
+    </form>
+    </div>
+
+    
+
+</div>
+    {{/each}}
+
+    </div>
+
+<a href="/" class="btn btn-outline-primary mt-3"> <~ Back </a>
