--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,28 @@
-<h2>Update the drone</h2>
+<div class="form">
+    <h2>Update the drone: {{drone.title}}</h2>
+
+    <form action="/drones/{{drone.id}}/edit" method="POST">
+    
+        <div class="form-group col-md-4 m-2"> 
+            <label for=""> Name </label>
+            <input type="text" name="name" value="{{drone.name}}" class="form-control">
+        </div>
+
+        <div class="form-group col-md-4 m-2"> 
+            <label for=""> Nº of Propellers</label>
+            <input type="number" name="propellers" value="{{drone.propellers}}" class="form-control">
+        </div>
+
+        <div class="form-group col-md-4 m-2"> 
+            <label for=""> Speed </label>
+            <input type="number" name="maxSpeed" value="{{drone.maxSpeed}}" class="form-control">
+        </div>
+
+
+    <button type="submit" class="btn btn-primary btn-lg m-2"> Update </button>
+
+    </form>
+
+</div>
+
+<a href="/" class="btn btn-outline-primary mt-3"> <~ Back </a>
